--- a/index.html
+++ b/index.html
@@ -36,39 +36,69 @@
       margin: 0 auto;
     }
     .service-card, .book-card {
-      background: white;
+      background: rgba(255, 255, 255, 0.95);
       padding: 1.5rem;
       margin-bottom: 1.5rem;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease;
+    }
+    .book-card:hover {
+      transform: translateY(-5px);
+      cursor: pointer;
     }
     .book-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1.5rem;
+      background: url('https://cdn.pixabay.com/photo/2015/09/18/20/20/bookshelf-944161_1280.jpg') center/cover no-repeat;
+      padding: 2rem;
+      border-radius: 10px;
     }
     .book-card img {
       max-width: 100%;
       height: auto;
       border-radius: 6px;
     }
-    .book-card button {
-      margin-top: 1rem;
-      padding: 0.5rem 1rem;
-      background-color: #4b7bec;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .book-card button:hover {
-      background-color: #3867d6;
-    }
     footer {
       background: #eee;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      max-width: 500px;
+      border-radius: 10px;
+      text-align: center;
+      position: relative;
+    }
+    .modal-content h3 {
+      margin-top: 0;
+    }
+    .close-btn {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      cursor: pointer;
+      background: #eee;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
@@ -113,35 +143,25 @@
   <section class="section" id="store">
     <h2>Bookshelf</h2>
     <div class="book-grid">
-      <div class="book-card">
-        <img src="https://via.placeholder.com/200x280?text=Book+1" alt="Book 1">
+      <div class="book-card" onclick="openModal('Book Title 1', 'This book helps learners build confidence and master foundational skills.', 'R120')">
+        <img src="https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?fit=crop&w=400&q=80" alt="Book 1">
         <h3>Book Title 1</h3>
-        <p>R120 - A powerful guide for young learners.</p>
-        <p>To order: Pay R120 via EFT to<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Acc No:</strong> 1234567890<br><strong>Ref:</strong> Book1 + Your Name</p>
       </div>
-      <div class="book-card">
-        <img src="https://via.placeholder.com/200x280?text=Book+2" alt="Book 2">
+      <div class="book-card" onclick="openModal('Book Title 2', 'A storytelling journey that sparks creativity in young minds.', 'R150')">
+        <img src="https://images.unsplash.com/photo-1544716278-1095ecf6c5df?fit=crop&w=400&q=80" alt="Book 2">
         <h3>Book Title 2</h3>
-        <p>R150 - A journey into storytelling for kids.</p>
-        <p>To order: Pay R150 via EFT to<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Acc No:</strong> 1234567890<br><strong>Ref:</strong> Book2 + Your Name</p>
       </div>
-      <div class="book-card">
-        <img src="https://via.placeholder.com/200x280?text=Book+3" alt="Book 3">
+      <div class="book-card" onclick="openModal('Book Title 3', 'A practical guide for aspiring tutors filled with strategies and techniques.', 'R130')">
+        <img src="https://images.unsplash.com/photo-1590608897129-79da98d1590a?fit=crop&w=400&q=80" alt="Book 3">
         <h3>Book Title 3</h3>
-        <p>R130 - Skills and strategies for new tutors.</p>
-        <p>To order: Pay R130 via EFT to<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Acc No:</strong> 1234567890<br><strong>Ref:</strong> Book3 + Your Name</p>
       </div>
-      <div class="book-card">
-        <img src="https://via.placeholder.com/200x280?text=Book+4" alt="Book 4">
+      <div class="book-card" onclick="openModal('Book Title 4', 'Activities and methods designed for early childhood education.', 'R110')">
+        <img src="https://images.unsplash.com/photo-1581093588401-8c73f4e5f5c6?fit=crop&w=400&q=80" alt="Book 4">
         <h3>Book Title 4</h3>
-        <p>R110 - Creative learning for early grades.</p>
-        <p>To order: Pay R110 via EFT to<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Acc No:</strong> 1234567890<br><strong>Ref:</strong> Book4 + Your Name</p>
       </div>
-      <div class="book-card">
-        <img src="https://via.placeholder.com/200x280?text=Book+5" alt="Book 5">
+      <div class="book-card" onclick="openModal('Book Title 5', 'A guide to writing fiction with purpose and imagination.', 'R160')">
+        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?fit=crop&w=400&q=80" alt="Book 5">
         <h3>Book Title 5</h3>
-        <p>R160 - Writing with impact and imagination.</p>
-        <p>To order: Pay R160 via EFT to<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Acc No:</strong> 1234567890<br><strong>Ref:</strong> Book5 + Your Name</p>
       </div>
     </div>
   </section>
@@ -156,5 +176,28 @@
   <footer>
     <p>&copy; 2025 Lithako Edu and Sports. Website by CoVerse Studio.</p>
   </footer>
+
+  <!-- Modal Popup -->
+  <div class="modal" id="bookModal">
+    <div class="modal-content">
+      <button class="close-btn" onclick="closeModal()">&times;</button>
+      <h3 id="modalTitle"></h3>
+      <p id="modalDescription"></p>
+      <p><strong id="modalPrice"></strong></p>
+      <p>To order, pay via EFT:<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Account No:</strong> 1234567890<br><strong>Ref:</strong> Book Title + Your Name</p>
+    </div>
+  </div>
+
+  <script>
+    function openModal(title, description, price) {
+      document.getElementById('modalTitle').innerText = title;
+      document.getElementById('modalDescription').innerText = description;
+      document.getElementById('modalPrice').innerText = price;
+      document.getElementById('bookModal').style.display = 'flex';
+    }
+    function closeModal() {
+      document.getElementById('bookModal').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
