--- a/index.html
+++ b/index.html
@@ -42,70 +42,11 @@
       max-width: 1000px;
       margin: 0 auto;
     }
-    .service-card, .book-card {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .book-card:hover {
-      transform: translateY(-5px);
-      cursor: pointer;
-    }
-    .book-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      background: url('https://cdn.pixabay.com/photo/2015/09/18/20/20/bookshelf-944161_1280.jpg') center/cover no-repeat;
-      padding: 2rem;
-      border-radius: 10px;
-    }
-    .book-card img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 6px;
-    }
     footer {
       background: #eee;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
-    }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.6);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: white;
-      padding: 2rem;
-      max-width: 500px;
-      border-radius: 10px;
-      text-align: center;
-      position: relative;
-    }
-    .modal-content h3 {
-      margin-top: 0;
-    }
-    .close-btn {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      cursor: pointer;
-      background: #eee;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
     }
   </style>
 </head>
@@ -129,7 +70,12 @@
 
   <section class="section" id="about">
     <h2>About Lesupi</h2>
-    <p>Lesupi Ranneile is a dedicated educator, author, and mentor passionate about empowering young learners and the next generation of educators. Based in Matlosana City, she runs Lithako Edu and Sports to support learning in practical, engaging ways.</p>
+    <p>Lesupi Ranneile is a dedicated educator, author, and mentor passionate about empowering young learners and the next generation of educators. Based in Matlosana City, he runs Lithako Edu and Sports to support learning in practical, engaging ways.</p>
+    <p>He believes in the power of books, education, and mentorship to unlock potential and inspire greatness in youth and tutors alike.</p>
   </section>
 
-  <!-- rest of the code remains unchanged -->
+  <footer>
+    <p>&copy; 2025 Lithako Edu and Sports. Website by CoVerse Studio.</p>
+  </footer>
+</body>
+</html>
