--- a/index.html
+++ b/index.html
@@ -42,11 +42,70 @@
       max-width: 1000px;
       margin: 0 auto;
     }
+    .service-card, .book-card {
+      background: rgba(255, 255, 255, 0.95);
+      padding: 1.5rem;
+      margin-bottom: 1.5rem;
+      border-radius: 10px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: transform 0.3s ease;
+    }
+    .book-card:hover {
+      transform: translateY(-5px);
+      cursor: pointer;
+    }
+    .book-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+      background: url('https://cdn.pixabay.com/photo/2015/09/18/20/20/bookshelf-944161_1280.jpg') center/cover no-repeat;
+      padding: 2rem;
+      border-radius: 10px;
+    }
+    .book-card img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 6px;
+    }
     footer {
       background: #eee;
       text-align: center;
       padding: 1rem;
       font-size: 0.9rem;
+    }
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-content {
+      background: white;
+      padding: 2rem;
+      max-width: 500px;
+      border-radius: 10px;
+      text-align: center;
+      position: relative;
+    }
+    .modal-content h3 {
+      margin-top: 0;
+    }
+    .close-btn {
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      cursor: pointer;
+      background: #eee;
+      border: none;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
     }
   </style>
 </head>
@@ -74,8 +133,79 @@
     <p>He believes in the power of books, education, and mentorship to unlock potential and inspire greatness in youth and tutors alike.</p>
   </section>
 
+  <section class="section" id="services">
+    <h2>Our Services</h2>
+    <div class="service-card">
+      <h3>Tutoring (Ages 5–15)</h3>
+      <p>One-on-one tutoring sessions to boost performance – R190/hour.</p>
+    </div>
+    <div class="service-card">
+      <h3>Coaching for Young Writers</h3>
+      <p>Inspire and guide aspiring fiction authors.</p>
+    </div>
+    <div class="service-card">
+      <h3>Coach the Tutor Program</h3>
+      <p>Train young graduates to become professional tutors – R490 per 1.5 hour session.</p>
+    </div>
+  </section>
+
+  <section class="section" id="store">
+    <h2>Bookshelf</h2>
+    <div class="book-grid">
+      <div class="book-card" onclick="openModal('Book Title 1', 'This book helps learners build confidence and master foundational skills.', 'R120')">
+        <img src="https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?fit=crop&w=400&q=80" alt="Book 1">
+        <h3>Book Title 1</h3>
+      </div>
+      <div class="book-card" onclick="openModal('Book Title 2', 'A storytelling journey that sparks creativity in young minds.', 'R150')">
+        <img src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?fit=crop&w=400&q=80" alt="Book 2">
+        <h3>Book Title 2</h3>
+      </div>
+      <div class="book-card" onclick="openModal('Book Title 3', 'A practical guide for aspiring tutors filled with strategies and techniques.', 'R130')">
+        <img src="https://images.unsplash.com/photo-1586489944902-9573eaf0c92e?fit=crop&w=400&q=80" alt="Book 3">
+        <h3>Book Title 3</h3>
+      </div>
+      <div class="book-card" onclick="openModal('Book Title 4', 'Activities and methods designed for early childhood education.', 'R110')">
+        <img src="https://images.unsplash.com/photo-1544717303-2782549b5136?fit=crop&w=400&q=80" alt="Book 4">
+        <h3>Book Title 4</h3>
+      </div>
+      <div class="book-card" onclick="openModal('Book Title 5', 'A guide to writing fiction with purpose and imagination.', 'R160')">
+        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?fit=crop&w=400&q=80" alt="Book 5">
+        <h3>Book Title 5</h3>
+      </div>
+    </div>
+  </section>
+
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:lesupiranneile@gmail.com">lesupiranneile@gmail.com</a></p>
+    <p>Phone: 067 265 6319</p>
+    <p>Location: Matlosana City</p>
+  </section>
+
   <footer>
     <p>&copy; 2025 Lithako Edu and Sports. Website by CoVerse Studio.</p>
   </footer>
+
+  <div class="modal" id="bookModal">
+    <div class="modal-content">
+      <button class="close-btn" onclick="closeModal()">&times;</button>
+      <h3 id="modalTitle"></h3>
+      <p id="modalDescription"></p>
+      <p><strong id="modalPrice"></strong></p>
+      <p>To order, pay via EFT:<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Account No:</strong> 1234567890<br><strong>Ref:</strong> Book Title + Your Name</p>
+    </div>
+  </div>
+
+  <script>
+    function openModal(title, description, price) {
+      document.getElementById('modalTitle').innerText = title;
+      document.getElementById('modalDescription').innerText = description;
+      document.getElementById('modalPrice').innerText = price;
+      document.getElementById('bookModal').style.display = 'flex';
+    }
+    function closeModal() {
+      document.getElementById('bookModal').style.display = 'none';
+    }
+  </script>
 </body>
 </html>
