--- a/index.html
+++ b/index.html
@@ -124,67 +124,34 @@
   <section class="hero">
     <h2>Discover Inspiring Educational Books</h2>
     <p>Buy hard copies of books written by Lesupi directly from the website.</p>
-    <img src="https://images.unsplash.com/photo-1584466996938-0499f19dfeaf?fit=crop&w=1000&q=80" alt="Sports Coach with Kids">
-  </section>
-
-  <section class="section" id="about">
-    <h2>About Lesupi</h2>
-    <p>Lesupi Ranneile is a dedicated educator, author, and mentor passionate about empowering young learners and the next generation of educators. Based in Matlosana City, he runs Lithako Edu and Sports to support learning in practical, engaging ways.</p>
-    <p>He believes in the power of books, education, and mentorship to unlock potential and inspire greatness in youth and tutors alike.</p>
-  </section>
-
-  <section class="section" id="services">
-    <h2>Our Services</h2>
-    <div class="service-card">
-      <h3>Tutoring (Ages 5–15)</h3>
-      <p>One-on-one tutoring sessions to boost performance – R190/hour.</p>
-    </div>
-    <div class="service-card">
-      <h3>Coaching for Young Writers</h3>
-      <p>Inspire and guide aspiring fiction authors.</p>
-    </div>
-    <div class="service-card">
-      <h3>Coach the Tutor Program</h3>
-      <p>Train young graduates to become professional tutors – R490 per 1.5 hour session.</p>
-    </div>
+    <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?fit=crop&w=1000&q=80" alt="Male Sports Coach">
   </section>
 
   <section class="section" id="store">
     <h2>Bookshelf</h2>
     <div class="book-grid">
-      <div class="book-card" onclick="openModal('Book Title 1', 'This book helps learners build confidence and master foundational skills.', 'R120')">
-        <img src="https://images.unsplash.com/photo-1544716278-ca5e3f4abd8c?fit=crop&w=400&q=80" alt="Book 1">
-        <h3>Book Title 1</h3>
+      <div class="book-card" onclick="openModal('Coaching Confidence', 'A practical guide for youth sports coaching.', 'R120')">
+        <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?fit=crop&w=400&q=80" alt="Book 1">
+        <h3>Coaching Confidence</h3>
       </div>
-      <div class="book-card" onclick="openModal('Book Title 2', 'A storytelling journey that sparks creativity in young minds.', 'R150')">
-        <img src="https://images.unsplash.com/photo-1495446815901-a7297e633e8d?fit=crop&w=400&q=80" alt="Book 2">
-        <h3>Book Title 2</h3>
+      <div class="book-card" onclick="openModal('Kids in Motion', 'A creative book that inspires children through physical play and teamwork.', 'R150')">
+        <img src="https://images.unsplash.com/photo-1531251445707-1f000e1e87d0?fit=crop&w=400&q=80" alt="Book 2">
+        <h3>Kids in Motion</h3>
       </div>
-      <div class="book-card" onclick="openModal('Book Title 3', 'A practical guide for aspiring tutors filled with strategies and techniques.', 'R130')">
-        <img src="https://images.unsplash.com/photo-1586489944902-9573eaf0c92e?fit=crop&w=400&q=80" alt="Book 3">
-        <h3>Book Title 3</h3>
+      <div class="book-card" onclick="openModal('Play to Grow', 'Sports-based learning activities for kids aged 5–12.', 'R130')">
+        <img src="https://images.unsplash.com/photo-1544717303-2782549b5136?fit=crop&w=400&q=80" alt="Book 3">
+        <h3>Play to Grow</h3>
       </div>
-      <div class="book-card" onclick="openModal('Book Title 4', 'Activities and methods designed for early childhood education.', 'R110')">
-        <img src="https://images.unsplash.com/photo-1544717303-2782549b5136?fit=crop&w=400&q=80" alt="Book 4">
-        <h3>Book Title 4</h3>
+      <div class="book-card" onclick="openModal('Train the Trainer', 'A resource for developing aspiring youth coaches.', 'R110')">
+        <img src="https://images.unsplash.com/photo-1588015431031-55d3d088a36d?fit=crop&w=400&q=80" alt="Book 4">
+        <h3>Train the Trainer</h3>
       </div>
-      <div class="book-card" onclick="openModal('Book Title 5', 'A guide to writing fiction with purpose and imagination.', 'R160')">
-        <img src="https://images.unsplash.com/photo-1516979187457-637abb4f9353?fit=crop&w=400&q=80" alt="Book 5">
-        <h3>Book Title 5</h3>
+      <div class="book-card" onclick="openModal('Mind & Muscle', 'Linking cognitive skills with physical activity for young athletes.', 'R160')">
+        <img src="https://images.unsplash.com/photo-1529088742347-d6a14d6a0b18?fit=crop&w=400&q=80" alt="Book 5">
+        <h3>Mind & Muscle</h3>
       </div>
     </div>
   </section>
-
-  <section class="section" id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:lesupiranneile@gmail.com">lesupiranneile@gmail.com</a></p>
-    <p>Phone: 067 265 6319</p>
-    <p>Location: Matlosana City</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Lithako Edu and Sports. Website by CoVerse Studio.</p>
-  </footer>
 
   <div class="modal" id="bookModal">
     <div class="modal-content">
