--- a/index.html
+++ b/index.html
@@ -124,31 +124,31 @@
   <section class="hero">
     <h2>Discover Inspiring Educational Books</h2>
     <p>Buy hard copies of books written by Lesupi directly from the website.</p>
-    <img src="https://images.unsplash.com/photo-1605296867304-46d5465a13f1?fit=crop&w=1000&q=80" alt="Male Sports Coach">
+    <img src="https://images.pexels.com/photos/264337/pexels-photo-264337.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Male Sports Coach">
   </section>
 
   <section class="section" id="store">
     <h2>Bookshelf</h2>
     <div class="book-grid">
-      <div class="book-card" onclick="openModal('Coaching Confidence', 'A practical guide for youth sports coaching.', 'R120')">
-        <img src="https://images.unsplash.com/photo-1528207776546-365bb710ee93?fit=crop&w=400&q=80" alt="Book 1">
-        <h3>Coaching Confidence</h3>
+      <div class="book-card" onclick="openModal('Face It', 'A powerful memoir capturing the journey of strength, creativity, and identity.', 'R120')">
+        <img src="https://images.pexels.com/photos/3990897/pexels-photo-3990897.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 1">
+        <h3>Face It</h3>
       </div>
-      <div class="book-card" onclick="openModal('Kids in Motion', 'A creative book that inspires children through physical play and teamwork.', 'R150')">
-        <img src="https://images.unsplash.com/photo-1531251445707-1f000e1e87d0?fit=crop&w=400&q=80" alt="Book 2">
-        <h3>Kids in Motion</h3>
+      <div class="book-card" onclick="openModal('Take The Risk', 'Motivational insights into making bold decisions and building courage.', 'R150')">
+        <img src="https://images.pexels.com/photos/2386687/pexels-photo-2386687.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 2">
+        <h3>Take The Risk</h3>
       </div>
-      <div class="book-card" onclick="openModal('Play to Grow', 'Sports-based learning activities for kids aged 5–12.', 'R130')">
-        <img src="https://images.unsplash.com/photo-1544717303-2782549b5136?fit=crop&w=400&q=80" alt="Book 3">
-        <h3>Play to Grow</h3>
+      <div class="book-card" onclick="openModal('The Sorrows of Young Werther', 'A classic story of emotion, youth, and expression — timeless and poetic.', 'R130')">
+        <img src="https://images.pexels.com/photos/6475044/pexels-photo-6475044.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 3">
+        <h3>The Sorrows of Young Werther</h3>
       </div>
-      <div class="book-card" onclick="openModal('Train the Trainer', 'A resource for developing aspiring youth coaches.', 'R110')">
-        <img src="https://images.unsplash.com/photo-1588015431031-55d3d088a36d?fit=crop&w=400&q=80" alt="Book 4">
-        <h3>Train the Trainer</h3>
+      <div class="book-card" onclick="openModal('Untitled Black Book', 'A modern notebook for thoughts, reflection, and coaching strategy.', 'R110')">
+        <img src="https://images.pexels.com/photos/2294881/pexels-photo-2294881.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 4">
+        <h3>Untitled Black Book</h3>
       </div>
-      <div class="book-card" onclick="openModal('Mind & Muscle', 'Linking cognitive skills with physical activity for young athletes.', 'R160')">
-        <img src="https://images.unsplash.com/photo-1529088742347-d6a14d6a0b18?fit=crop&w=400&q=80" alt="Book 5">
-        <h3>Mind & Muscle</h3>
+      <div class="book-card" onclick="openModal('Coaching Notes', 'Blank pages to capture winning ideas and future playbooks.', 'R160')">
+        <img src="https://images.pexels.com/photos/6373296/pexels-photo-6373296.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 5">
+        <h3>Coaching Notes</h3>
       </div>
     </div>
   </section>
