--- a/index.html
+++ b/index.html
@@ -127,6 +127,27 @@
     <img src="https://images.pexels.com/photos/264337/pexels-photo-264337.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Male Sports Coach">
   </section>
 
+  <section class="section" id="about">
+    <h2>About Lesupi</h2>
+    <p>Lesupi Ranneile is a dedicated educator, author, and mentor passionate about empowering young learners and the next generation of educators. Based in Matlosana City, he runs Lithako Edu and Sports to support learning in practical, engaging ways. He believes in the power of books, education, and mentorship to unlock potential and inspire greatness in youth and tutors alike.</p>
+  </section>
+
+  <section class="section" id="services">
+    <h2>Our Services</h2>
+    <div class="service-card">
+      <h3>Tutoring (Ages 5–15)</h3>
+      <p>One-on-one tutoring sessions to boost performance – R190/hour.</p>
+    </div>
+    <div class="service-card">
+      <h3>Coaching for Young Writers</h3>
+      <p>Inspire and guide aspiring fiction authors.</p>
+    </div>
+    <div class="service-card">
+      <h3>Coach the Tutor Program</h3>
+      <p>Train young graduates to become professional tutors – R490 per 1.5 hour session.</p>
+    </div>
+  </section>
+
   <section class="section" id="store">
     <h2>Bookshelf</h2>
     <div class="book-grid">
@@ -152,6 +173,17 @@
       </div>
     </div>
   </section>
+
+  <section class="section" id="contact">
+    <h2>Contact Us</h2>
+    <p>Email: <a href="mailto:lesupiranneile@gmail.com">lesupiranneile@gmail.com</a></p>
+    <p>Phone: 067 265 6319</p>
+    <p>Location: Matlosana City</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 Lithako Edu and Sports. Website by @CoVerse Studio. All rights reserved.</p>
+  </footer>
 
   <div class="modal" id="bookModal">
     <div class="modal-content">
