--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <section class="hero">
     <h2>Discover Inspiring Educational Books</h2>
-    <p>Buy hard copies of books written by Lesupi directly from the website.</p>
+    <p>Buy hard copies of books written by Ranneile Lesupi directly from his website.</p>
     <img src="https://images.pexels.com/photos/264337/pexels-photo-264337.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Male Sports Coach">
   </section>
 
@@ -176,9 +176,9 @@
 
   <section class="section" id="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:lesupiranneile@gmail.com">lesupiranneile@gmail.com</a></p>
+    <p>Email: <a href="mailto:rllesupipersonal@gmail.com">lesupiranneile@gmail.com</a></p>
     <p>Phone: 067 265 6319</p>
-    <p>Location: Matlosana City</p>
+    <p>Location: City Of Matlosana</p>
   </section>
 
   <footer>
