--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <section class="section" id="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:rllesupipersonal@gmail.com">lesupiranneile@gmail.com</a></p>
+    <p>Email: <a href="mailto:rllesupipersonal@gmail.com">rllesupipersonal@gmail.com</a></p>
     <p>Phone: 067 265 6319</p>
     <p>Location: City Of Matlosana</p>
   </section>
