--- a/index.html
+++ b/index.html
@@ -3,208 +3,141 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lithako Edu and Sports</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <title>LithakoEdu | The Loony Hypochondriacs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
       margin: 0;
-      padding: 0;
+      font-family: 'Inter', sans-serif;
+      line-height: 1.6;
       background: #f9f9f9;
-      color: #333;
+      color: #222;
     }
-    header {
-      background: #4b7bec;
+    header, footer {
+      background: #222;
       color: white;
-      padding: 2rem;
       text-align: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
+      padding: 2rem 1rem;
     }
     .hero {
-      background: #e6f0ff;
-      padding: 3rem 2rem;
       text-align: center;
+      padding: 2rem 1rem;
+      background: #fff;
     }
     .hero img {
       max-width: 100%;
       height: auto;
-      border-radius: 12px;
+      border-radius: 8px;
       margin-top: 1rem;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
     .section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: 0 auto;
+      max-width: 900px;
+      margin: auto;
+      padding: 2rem 1rem;
     }
-    .service-card, .book-card {
-      background: rgba(255, 255, 255, 0.95);
+    h2 {
+      color: #333;
+    }
+    .testimonials {
+      background: #f0f0f0;
+      padding: 2rem;
+      border-radius: 10px;
+      margin: 2rem 0;
+    }
+    .testimonials p {
+      font-style: italic;
+      margin-bottom: 1rem;
+    }
+    .info-box {
+      background: #eef;
       padding: 1.5rem;
-      margin-bottom: 1.5rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-      transition: transform 0.3s ease;
-    }
-    .book-card:hover {
-      transform: translateY(-5px);
-      cursor: pointer;
-    }
-    .book-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-      background: url('https://cdn.pixabay.com/photo/2015/09/18/20/20/bookshelf-944161_1280.jpg') center/cover no-repeat;
-      padding: 2rem;
-      border-radius: 10px;
-    }
-    .book-card img {
-      max-width: 100%;
-      height: auto;
+      border-left: 5px solid #4b7bec;
       border-radius: 6px;
+      margin-bottom: 1.5rem;
     }
-    footer {
-      background: #eee;
-      text-align: center;
-      padding: 1rem;
+    .footer-note {
       font-size: 0.9rem;
+      color: #aaa;
+      margin-top: 1rem;
     }
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.6);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: white;
-      padding: 2rem;
-      max-width: 500px;
-      border-radius: 10px;
-      text-align: center;
-      position: relative;
-    }
-    .modal-content h3 {
-      margin-top: 0;
-    }
-    .close-btn {
-      position: absolute;
-      top: 1rem;
-      right: 1rem;
-      cursor: pointer;
-      background: #eee;
-      border: none;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
+    a {
+      color: #4b7bec;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Lithako Edu and Sports</h1>
-    <p>"Empowering Young Minds & Tutors Alike"</p>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#store">Bookshelf</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
 
-  <section class="hero">
-    <h2>Discover Inspiring Educational Books</h2>
-    <p>Buy hard copies of books written by Ranneile Lesupi directly from his website.</p>
-    <img src="https://images.pexels.com/photos/264337/pexels-photo-264337.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Male Sports Coach">
-  </section>
+<header>
+  <h1>The Loony Hypochondriacs!</h1>
+  <p>Pre-order now for only R369.00</p>
+</header>
 
-  <section class="section" id="about">
-    <h2>About Lesupi</h2>
-    <p>Lesupi Ranneile is a dedicated educator, author, and mentor passionate about empowering young learners and the next generation of educators. Based in Matlosana City, he runs Lithako Edu and Sports to support learning in practical, engaging ways. He believes in the power of books, education, and mentorship to unlock potential and inspire greatness in youth and tutors alike.</p>
-  </section>
+<section class="hero">
+  <h2>We've Got You Covered</h2>
+  <img src="https://images.pexels.com/photos/264337/pexels-photo-264337.jpeg?auto=compress&cs=tinysrgb&h=600" alt="The Loony Hypochondriacs Cover">
+</section>
 
-  <section class="section" id="services">
-    <h2>Our Services</h2>
-    <div class="service-card">
-      <h3>Tutoring (Ages 5–15)</h3>
-      <p>One-on-one tutoring sessions to boost performance – R190/hour.</p>
-    </div>
-    <div class="service-card">
-      <h3>Coaching for Young Writers</h3>
-      <p>Inspire and guide aspiring fiction authors.</p>
-    </div>
-    <div class="service-card">
-      <h3>Coach the Tutor Program</h3>
-      <p>Train young graduates to become professional tutors – R490 per 1.5 hour session.</p>
-    </div>
-  </section>
+<section class="section">
+  <h2>About the Book</h2>
+  <p>
+    Welcome to Hypercondria™ — a flawless, medically optimized town where not having a disorder is the ultimate red flag.
+    Here, wellness is currency, therapy is mandatory, and your daily dose of medication isn’t just encouraged — it’s celebrated.
+    From Diagnosipops™ to Sadness Management Seminars, everyone’s a proud patient. Feeling fine? You’re clearly in denial.
+  </p>
+  <p>
+    Enter Hloux, a quiet skeptic with a suspiciously clean medical record. When a chance encounter with a rebellious soul named
+    Noni exposes him to the glitch beneath the system’s polished smile, Hloux begins to see the truth: They don’t need to drug you —
+    just convince you to medicate yourself.
+  </p>
+  <p>
+    As they descend deeper into the pharmaceutical funhouse, dodging Side-Effect Evangelists, Dopamine Influencers, and pill-pushing
+    prophets, Hloux and Noni must unlearn everything the town has branded “self-care.” Because beneath the synthetic joy and curated
+    neuroses, something unmedicated is waking up… And it’s not approved by the Council of Diagnostics™.
+  </p>
+</section>
 
-  <section class="section" id="store">
-    <h2>Bookshelf</h2>
-    <div class="book-grid">
-      <div class="book-card" onclick="openModal('Face It', 'A powerful memoir capturing the journey of strength, creativity, and identity.', 'R120')">
-        <img src="https://images.pexels.com/photos/3990897/pexels-photo-3990897.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 1">
-        <h3>Face It</h3>
-      </div>
-      <div class="book-card" onclick="openModal('Take The Risk', 'Motivational insights into making bold decisions and building courage.', 'R150')">
-        <img src="https://images.pexels.com/photos/2386687/pexels-photo-2386687.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 2">
-        <h3>Take The Risk</h3>
-      </div>
-      <div class="book-card" onclick="openModal('The Sorrows of Young Werther', 'A classic story of emotion, youth, and expression — timeless and poetic.', 'R130')">
-        <img src="https://images.pexels.com/photos/6475044/pexels-photo-6475044.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 3">
-        <h3>The Sorrows of Young Werther</h3>
-      </div>
-      <div class="book-card" onclick="openModal('Untitled Black Book', 'A modern notebook for thoughts, reflection, and coaching strategy.', 'R110')">
-        <img src="https://images.pexels.com/photos/2294881/pexels-photo-2294881.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 4">
-        <h3>Untitled Black Book</h3>
-      </div>
-      <div class="book-card" onclick="openModal('Coaching Notes', 'Blank pages to capture winning ideas and future playbooks.', 'R160')">
-        <img src="https://images.pexels.com/photos/6373296/pexels-photo-6373296.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=500&w=340" alt="Book 5">
-        <h3>Coaching Notes</h3>
-      </div>
-    </div>
-  </section>
+<section class="section testimonials">
+  <h2>What Readers Are Saying</h2>
+  <p>"I loved it, as it was very quirky, funny and thought provoking."</p>
+  <p>"The Looney Hypochondriacs is a brilliantly satirical romp through the neuroses of a truly unforgettable character... 
+     If you enjoy satire with a touch of madness, this is the perfect read."</p>
+</section>
 
-  <section class="section" id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:rllesupipersonal@gmail.com">rllesupipersonal@gmail.com</a></p>
-    <p>Phone: 067 265 6319</p>
-    <p>Location: City Of Matlosana</p>
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Lithako Edu and Sports. Website by @CoVerse Studio. All rights reserved.</p>
-  </footer>
-
-  <div class="modal" id="bookModal">
-    <div class="modal-content">
-      <button class="close-btn" onclick="closeModal()">&times;</button>
-      <h3 id="modalTitle"></h3>
-      <p id="modalDescription"></p>
-      <p><strong id="modalPrice"></strong></p>
-      <p>To order, pay via EFT:<br><strong>Account Name:</strong> Lithako Edu and Sports<br><strong>Bank:</strong> Your Bank<br><strong>Account No:</strong> 1234567890<br><strong>Ref:</strong> Book Title + Your Name</p>
-    </div>
+<section class="section">
+  <h2>How to Pre-Order</h2>
+  <div class="info-box">
+    <p><strong>Email your full name & the hashtag #TLH to:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Make an EFT payment to:</strong></p>
+    <ul>
+      <li><strong>Bank:</strong> Capitec Business</li>
+      <li><strong>Account Name:</strong> Lithako Edu and Sports</li>
+      <li><strong>Account Number:</strong> 1051 3359 06</li>
+    </ul>
+    <p><strong>Reference:</strong> Your Full Name + #TLH</p>
   </div>
+  <p>📦 Delivery available worldwide via Pep, Pudo, or PostNet (charged separately).</p>
+</section>
 
-  <script>
-    function openModal(title, description, price) {
-      document.getElementById('modalTitle').innerText = title;
-      document.getElementById('modalDescription').innerText = description;
-      document.getElementById('modalPrice').innerText = price;
-      document.getElementById('bookModal').style.display = 'flex';
-    }
-    function closeModal() {
-      document.getElementById('bookModal').style.display = 'none';
-    }
-  </script>
+<section class="section">
+  <h2>About the Author</h2>
+  <p>
+    Ranneile Lesupi is a dynamic entrepreneur, creative force, and author whose ventures span across industry and imagination.
+    As the creative lifeblood behind Ranneile Projects, he leads innovative initiatives that defy conventional categories.
+    Through Lithako Edu & Sports, he also coaches and mentors children aged 5–15, nurturing tomorrow’s champions both on and off the field.
+  </p>
+  <p>
+    In hospitality, his company Maqhubu Hospitality brings authentic warmth and elegance to every guest experience.
+    He’s also the tech-savvy founder of Lelomotech, providing seamless connectivity via proprietary Wi-Fi tech.
+    His fashion label, RuntaFit Apparel, blends style with purpose—all guided by his powerhouse holdings firm, House Of Nneile.
+  </p>
+  <p>
+    On the page and screen, Ranneile channels his storytelling gift—writing books, series, and screenplays that speak boldly to his community.
+  </p>
+</section>
+
+<footer>
+  <p>© 2025 LithakoEdu. Designed by @CoVerse Studio</p>
+</footer>
+
 </body>
 </html>
