--- a/index.html
+++ b/index.html
@@ -2,137 +2,158 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Loony Hypochondriacs – Lithaku Edu</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LithakoEdu | The Loony Hypochondriacs</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Inter', sans-serif;
       margin: 0;
-      background: #f7f1ff;
-      color: #2e1f47;
+      font-family: 'Inter', sans-serif;
+      line-height: 1.6;
+      background: #fefaf3;
+      color: #2b2b2b;
     }
-    header {
-      background: #ffc6e3;
-      padding: 2rem;
+    header, footer {
+      background: #f6e8d7;
+      color: #4b3b3b;
       text-align: center;
-    }
-    nav a {
-      margin: 0 1rem;
-      color: #2e1f47;
-      text-decoration: none;
-      font-weight: 600;
+      padding: 2rem 1rem;
     }
     .hero {
-      background: #ffeef7;
       text-align: center;
-      padding: 2rem;
+      padding: 2rem 1rem;
+      background: #fffdf9;
     }
     .hero img {
-      max-width: 320px;
-      width: 100%;
-      border-radius: 10px;
-      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-      margin: 1rem 0;
-    }
-    .btn {
-      background: #ff6fcf;
-      color: white;
-      border: none;
-      padding: 0.75rem 1.5rem;
-      border-radius: 6px;
-      font-size: 1rem;
-      font-weight: bold;
-      text-decoration: none;
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+      margin-top: 1rem;
     }
     .section {
-      padding: 2rem;
       max-width: 900px;
       margin: auto;
+      padding: 2rem 1rem;
     }
-    .section h2 {
-      color: #4c1d95;
+    h2 {
+      color: #3e2f2f;
     }
-    .testimonial {
-      background: #fff;
-      border-left: 5px solid #ff6fcf;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      border-radius: 8px;
+    .testimonials {
+      background: #fef0dd;
+      padding: 2rem;
+      border-radius: 10px;
+      margin: 2rem 0;
+    }
+    .testimonials p {
       font-style: italic;
+      margin-bottom: 1rem;
     }
-    footer {
-      background: #fde3f5;
-      text-align: center;
-      padding: 1rem;
+    .info-box {
+      background: #fff6ea;
+      padding: 1.5rem;
+      border-left: 5px solid #c07a5c;
+      border-radius: 6px;
+      margin-bottom: 1.5rem;
+    }
+    .cta-button {
+      display: inline-block;
+      margin-top: 1.5rem;
+      padding: 0.8rem 1.6rem;
+      background: #c07a5c;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: 600;
+      transition: background 0.3s;
+    }
+    .cta-button:hover {
+      background: #a85e45;
+    }
+    .footer-note {
       font-size: 0.9rem;
-      margin-top: 2rem;
+      color: #666;
+      margin-top: 1rem;
+    }
+    a {
+      color: #c07a5c;
     }
   </style>
 </head>
 <body>
 
 <header>
-  <h1>Lithaku Edu</h1>
-  <p>Pre-order *The Loony Hypochondriacs* now – Only R369</p>
-  <nav>
-    <a href="#about">About the Book</a>
-    <a href="#bio">About the Author</a>
-    <a href="#order">How to Order</a>
-  </nav>
+  <h1>The Loony Hypochondriacs!</h1>
+  <p>Pre-order now for only R369.00</p>
 </header>
 
 <section class="hero">
-  <h2>The Loony Hypochondriacs</h2>
-  <p><em>We’ve Got You Covered</em></p>
-  <img src="https://unklhloux.netlify.app/The%20Loony%20Hypochondriacs.jpg" alt="The Loony Hypochondriacs book cover"/>
-  <br />
-  <a class="btn" href="mailto:lithakoedu@gmail.com?subject=Pre-Order TLH&body=Hi, I’d like to pre-order The Loony Hypochondriacs.%0AFull Name:%0ASurname:%0AHashtag: #TLH" target="_blank">Pre-Order Now</a>
-</section>
-
-<section class="section" id="about">
-  <h2>About the Book</h2>
-  <p>Welcome to Hypercondria™ — a flawless, medically optimized town where not having a disorder is the ultimate red flag.</p>
-  <p>Here, wellness is currency, therapy is mandatory, and your daily dose of medication isn’t just encouraged — it’s celebrated. From Diagnosipops™ to Sadness Management Seminars, everyone’s a proud patient. Feeling fine? You’re clearly in denial.</p>
-  <p>Enter Hloux, a quiet skeptic with a suspiciously clean medical record. When a chance encounter with a rebellious soul named Noni exposes him to the glitch beneath the system’s polished smile, Hloux begins to see the truth: they don’t need to drug you — just convince you to medicate yourself.</p>
-  <p>As they descend deeper into the pharmaceutical funhouse, dodging Side-Effect Evangelists, Dopamine Influencers, and pill-pushing prophets, Hloux and Noni must unlearn everything the town has branded “self-care.” Because beneath the synthetic joy and curated neuroses, something unmedicated is waking up...</p>
-  <p><strong>And it’s not approved by the Council of Diagnostics™.</strong></p>
+  <h2>A Satirical Thriller That Hits Home</h2>
+  <img src="The%20Loony%20Hypochondriacs.jpg" alt="The Loony Hypochondriacs Cover">
+  <a href="mailto:lithakoedu@gmail.com?subject=TLH Pre-Order&body=Hi, I would like to pre-order The Loony Hypochondriacs.\nFull Name:\nSurname:\n#TLH" class="cta-button">Pre-Order via Email</a>
 </section>
 
 <section class="section">
+  <h2>About the Book</h2>
+  <p>
+    Welcome to Hypercondria™ — a flawless, medically optimized town where not having a disorder is the ultimate red flag.
+    Here, wellness is currency, therapy is mandatory, and your daily dose of medication isn’t just encouraged — it’s celebrated.
+    From Diagnosipops™ to Sadness Management Seminars, everyone’s a proud patient. Feeling fine? You’re clearly in denial.
+  </p>
+  <p>
+    Enter Hloux, a quiet skeptic with a suspiciously clean medical record. When a chance encounter with a rebellious soul named
+    Noni exposes him to the glitch beneath the system’s polished smile, Hloux begins to see the truth: They don’t need to drug you —
+    just convince you to medicate yourself.
+  </p>
+  <p>
+    As they descend deeper into the pharmaceutical funhouse, dodging Side-Effect Evangelists, Dopamine Influencers, and pill-pushing
+    prophets, Hloux and Noni must unlearn everything the town has branded “self-care.” Because beneath the synthetic joy and curated
+    neuroses, something unmedicated is waking up… And it’s not approved by the Council of Diagnostics™.
+  </p>
+</section>
+
+<section class="section testimonials">
   <h2>What Readers Are Saying</h2>
-  <div class="testimonial">
-    "I loved it, as it was very quirky, funny and thought provoking."
-  </div>
-  <div class="testimonial">
-    "The Looney Hypochondriacs is a brilliantly satirical romp through the neuroses of a truly unforgettable character. With razor-sharp wit and clever cultural references, the author delivers a hilarious take on health obsessions, self-diagnoses, and the absurdities of modern medicine. Each page had me laughing out loud, sometimes in disbelief, often in recognition. It's clever, entertaining, and full of dry humor that hits the mark."
-  </div>
+  <p>"I loved it, as it was very quirky, funny and thought provoking."</p>
+  <p>"The Looney Hypochondriacs is a brilliantly satirical romp through the neuroses of a truly unforgettable character... 
+     If you enjoy satire with a touch of madness, this is the perfect read."</p>
 </section>
 
-<section class="section" id="order">
+<section class="section">
   <h2>How to Pre-Order</h2>
-  <p><strong>Price:</strong> R369 (Delivery charged separately – via Pep, PUDO, or PostNet)</p>
-  <p><strong>Delivery:</strong> Worldwide shipping. Orders ship end of September 2025.</p>
-  <p><strong>Step 1:</strong> Make an EFT payment to:</p>
-  <ul>
-    <li><strong>Account Name:</strong> Lithako Edu and Sports</li>
-    <li><strong>Bank:</strong> Capitec Business</li>
-    <li><strong>Account Number:</strong> 1051 3359 06</li>
-    <li><strong>Reference:</strong> Full Name + #TLH</li>
-  </ul>
-  <p><strong>Step 2:</strong> Email proof of payment to <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a> with your full name and the hashtag <strong>#TLH</strong>.</p>
+  <div class="info-box">
+    <p><strong>Email your full name & the hashtag #TLH to:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
+    <p><strong>Make an EFT payment to:</strong></p>
+    <ul>
+      <li><strong>Bank:</strong> Capitec Business</li>
+      <li><strong>Account Name:</strong> Lithako Edu and Sports</li>
+      <li><strong>Account Number:</strong> 1051 3359 06</li>
+    </ul>
+    <p><strong>Reference:</strong> Your Full Name + #TLH</p>
+  </div>
+  <p>📦 Delivery available worldwide via Pep, Pudo, or PostNet (charged separately).</p>
 </section>
 
-<section class="section" id="bio">
+<section class="section">
   <h2>About the Author</h2>
-  <p><strong>Ranneile Lesupi</strong>, Sports Coach & Business Visionary. A Storyteller at heart.</p>
-  <p>Ranneile Lesupi is a dynamic entrepreneur, creative force, and author whose ventures span across industry and imagination. As the creative lifeblood behind Ranneile Projects, he leads innovative initiatives that defy conventional categories. Through Lithako Edu & Sports, he also physically coaches and mentors children aged 5–15, nurturing tomorrow’s champions both on the field and in their lives.</p>
-  <p>In hospitality, his company Maqhubu Hospitality brings authentic warmth and elegance to every guest experience. He’s also the tech-savvy founder of Lelomotech, providing seamless Solar installations, proprietary Wi-Fi line and router connectivity. His fashion label, RuntaFit Apparel, blends style with purpose; all of this operates under the strategic guidance of his powerhouse holdings firm, House Of Nneile, where he excels as COO.</p>
-  <p>On the page and screen, Ranneile channels his storytelling gift of writing books, music, series, and screenplay that speak loudly to his community and beyond. His work is bold, real, lyrical and unapologetic. Every venture he leads is more than a project—it’s a statement.</p>
+  <p><strong>Ranneile Lesupi,</strong><br>Sports Coach & Business Visionary. A Storyteller at heart.</p>
+  <p>
+    Ranneile Lesupi is a dynamic entrepreneur, creative force, and author whose ventures span across industry and imagination.
+    As the creative lifeblood behind Ranneile Projects, he leads innovative initiatives that defy conventional categories.
+    Through Lithako Edu & Sports, he also physically coaches and mentors children aged 5–15, nurturing tomorrow’s champions both on the field and in their lives.
+  </p>
+  <p>
+    In hospitality, his company Maqhubu Hospitality brings authentic warmth and elegance to every guest experience.
+    He’s also the tech-savvy founder of Lelomotech, providing seamless Solar installations, proprietary Wi-Fi line and router connectivity.
+    His fashion label, RuntaFit Apparel, blends style with purpose; all of this operates under the strategic guidance of his powerhouse holdings firm, House Of Nneile, where he excels as COO.
+  </p>
+  <p>
+    On the page and screen, Ranneile channels his storytelling gift of writing books, music, series, and screenplay that speak loudly to his community and beyond.
+    His work is bold, real, lyrical and unapologetic. Every venture he leads is more than a project—it’s a statement.
+  </p>
 </section>
 
 <footer>
-  © 2025 Lithaku Edu | Designed by @CoVerse Studio. All rights reserved.
+  <p>© 2025 LithakoEdu. Designed by @CoVerse Studio</p>
 </footer>
 
 </body>
