--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header>
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo">
-    <h1>Welcome to: Lithako Edu & Sports</h1>
-    <p>Empowering our young minds through education & sports</p>
-  </header>
-
-  <!-- NAVIGATION -->
+  <!-- NAVBAR -->
   <nav class="navbar">
     <ul>
       <li><a href="index.html" class="active">Home</a></li>
@@ -25,21 +18,21 @@
     </ul>
   </nav>
 
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <img src="elephant-banner.jpg" alt="Lithako Elephant Theme" class="hero-img">
+  <!-- LOGO SECTION -->
+  <section class="logo-section">
+    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
   </section>
 
-  <!-- INTRODUCTION SECTION -->
-  <section class="section">
-    <h2>Our Mission</h2>
+  <!-- MAIN CONTENT -->
+  <section class="section light">
+    <h1>Welcome to: Lithako Edu & Sports</h1>
+    <p class="slogan">Empowering our young minds through education & sports.</p>
+
     <p>
       Our structured training programs are tailored for learners aged 5 to 15, combining academic support 
       with high-performance sports development across Football, Basketball, Netball, Athletics, and more.
-    </p>
-    <p>
       With qualified coaches, safe facilities, and results-driven programs, we empower every child to reach 
-      their full potential—academically, physically, and mentally.
+      their full potential — academically, physically, and mentally.
     </p>
     <p>
       We’re here to nurture their confidence, teach teamwork, and show them that dedication pays off both 
@@ -50,42 +43,13 @@
       which are values that will carry them far beyond the now.
     </p>
     <p><strong>Developing Complete athletes, because every child deserves a chance.</strong></p>
+
+    <div class="button-group">
+      <button onclick="window.location.href='books.html'">📘 Explore Our Books</button>
+      <button onclick="window.location.href='tutoring.html'">🎓 Join Our Tutoring</button>
+    </div>
   </section>
 
   <!-- ABOUT SECTION -->
-  <section class="section light">
-    <h2>About Ranneile Lesupi</h2>
-    <p>
-      Ranneile Lesupi is a visionary coach and founder of Lithako Edu & Sports, dedicated to nurturing young talent through structured academic and athletic programs that inspire growth, confidence, and leadership.
-    </p>
-  </section>
-
-  <!-- BOOKS SECTION -->
-  <section class="section">
-    <h2>Our Explore Books</h2>
-    <p>Discover creative stories and publications that challenge thinking and inspire imagination.</p>
-    <button onclick="window.location.href='books.html'">📘 Visit Books</button>
-  </section>
-
-  <!-- TUTORING SECTION -->
-  <section class="section light">
-    <h2>Our Join Tutoring</h2>
-    <p>Enroll your child for personalized academic assistance and sports coaching today.</p>
-    <button onclick="window.location.href='tutoring.html'">🎓 Learn More</button>
-  </section>
-
-  <!-- CONTACT SECTION -->
-  <section class="section contact">
-    <h2>Contact Us</h2>
-    <p><strong>Email:</strong> <a href="mailto:lithakoedu@gmail.com">lithakoedu@gmail.com</a></p>
-    <p><strong>Phone:</strong> +27 67 265 6319</p>
-    <p><strong>Location:</strong> City of Matlosana</p>
-  </section>
-
-  <!-- FOOTER -->
-  <footer>
-    &copy; 2025 Lithako Edu & Sports. All rights reserved.
-  </footer>
-
-</body>
-</html>
+  <section class="section about light">
+    <h2>Abou
