Refactor navbar and logo section in index.html

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
 </head>
 <body>
 
-  <!-- NAVBAR -->
-  <nav class="navbar">
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="books.html">Books</a></li>
-      <li><a href="tutoring.html">Tutoring</a></li>
-    </ul>
-  </nav>
+<!-- LOGO SECTION -->
+<section class="logo-section">
+  <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
+</section>
 
-  <!-- LOGO SECTION -->
-  <section class="logo-section">
-    <img src="Lithako-logo.png" alt="Lithako Edu & Sports Logo" class="logo-full">
-  </section>
+<!-- NAVIGATION -->
+<nav class="navbar">
+  <ul>
+    <li><a href="index.html" class="active">Home</a></li>
+    <li><a href="books.html">Books</a></li>
+    <li><a href="tutoring.html">Tutoring</a></li>
+  </ul>
+</nav>
 
   <!-- MAIN CONTENT -->
   <section class="section light">
